# OMNI-DC-MA

./: .gitignore  NOTICE.md  README.md  pyproject.toml  run_demo.py
LICENSES/: COLMAP-READER-BSD-3-Clause.txt  README.md
docs/: current-design.md  optimization-notes.md  release-v0.1.0.md
src/: config.py  demo.py  utility.py
src/colmap_utils/: __init__.py  densify.py  editing.py  filters.py  geometry.py  io.py  sparse_depth.py
src/model/: align_utils.py  backbone.py  backbone_trt.py  colmap_intrinsics.py  convgru.py  dyspn_module.py  final_reps.py  infer.py  modulated_deform_conv_func.py  nlspn_module.py  ognidc.py  pvt.py  resnet_cbam.py  tensor_stats.py
src/model/deformconv/src/: deform_psroi_pooling.h
src/model/deformconv/src/cuda/: deform_conv_cuda.cu  deform_psroi_pooling_cuda.cu  modulated_deform_conv_cuda.cu
src/model/ma_depthmap/: __init__.py  depth_model.py  prior.py  trt_encoder.py
src/model/ma_depthmap/network/: vit_factory.py
src/model/optim_layer/: cg_batch.py  helpers.py  optim_layer.py
src/robust_dc_protocol/: __init__.py  read_write_colmap_model.py
src/testing_scripts/: _common.sh  bicycle_demo.sh
tests/: conftest.py  test_bicycle_smoke.py  test_colmap_intrinsics.py  test_colmap_mask_output.py  test_colmap_sparse_depth_tool.py  test_colmap_utils_densify.py  test_colmap_utils_editing.py  test_imports.py
tools/: README.md  add_colmap_depth_points.py  bench_inference.py  bench_trt.py  build_dcn.cmd  build_trt_engines.ps1  export_backbone_trt.py  export_full_prior_512_trt.py  export_prior_trt.py  generate_colmap_sparse_depth.py  patch_dcn_sources.py  profile_forward.py
